EDSC-4329: Fixes icon alignment (#1856)

--- a/static/src/js/components/EDSCAlert/EDSCAlert.scss
+++ b/static/src/js/components/EDSCAlert/EDSCAlert.scss
@@ -10,7 +10,7 @@
 
   &__icon {
     font-size: 0.825rem;
-    margin-right: 1.5rem;
+    margin-right: 0.75rem;
     flex-shrink: 0;
   }
 }
